validate inputs without styx vars